--- a/templates/Admin/index.html
+++ b/templates/Admin/index.html
@@ -22,7 +22,7 @@
     <div class="flex">
         <div class="flex flex-col h-screen w-[300px] bg-indigo-900 justify-center">
             <div class="flex justify-center">
-                <h3 class="flex fixed top-2 text-gray-100 font-semibold pt-3 text-xl">Admin Panel</h3>
+                <h3 class="flex fixed top-2 text-gray-100 font-semibold pt-3 text-xl border-b-2">Admin Panel</h3>
             </div>
             <div class="flex justify-center m-3">
                 <h2 class="text-gray-100 font-semibold pt-3 text-l">Create Request</h2>
@@ -31,12 +31,13 @@
                 <h2 class="text-gray-100 font-semibold pt-3 text-l">Notifier</h2>
             </div>
             <div class="flex justify-center m-3">
-                <h2 class="flex fixed bottom-2 text-gray-100 font-semibold pt-3 text-l">Logout</h2>
+                <h2 class="flex  text-gray-100 font-semibold pt-3 text-l">Logout</h2>
             </div>
             
 
         </div>
-        <div>
+        <div class="flex justify-center w-full pt-3">
+            <h2 class="flex text-3xl font-semibold justify-center">Division of Computer Science and Engineering</h2>
 
         </div>
     </div>
