--- a/templates/User/reg.html
+++ b/templates/User/reg.html
@@ -2,35 +2,35 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 <div class="w-75 m-5" >
-<form>
+<form action="register" method="post">
     <h1>Register Form</h1>
     <br>
    <div class="form-group">
     <label for="exampleInputEmail1">Name</label>
-    <input type="text" class="form-control" id=""  placeholder="">
+    <input type="text" name="Name" class="form-control" id=""  placeholder="">
 
   </div>
 
     <div class="form-group">
     <label for="exampleInputEmail1">Register Number</label>
-    <input type="number" class="form-control" id=""  placeholder="">
+    <input type="number" name="RegNum" class="form-control" id=""  placeholder="">
 
   </div>
   <div class="form-group">
     <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id=""  placeholder="">
+    <input type="email" name="Email" class="form-control" id=""  placeholder="">
 
   </div>
 
     <div class="form-group">
     <label for="exampleInputEmail1">Phone</label>
-    <input type="number" class="form-control" id=""  placeholder="">
+    <input type="number" name="Mob" class="form-control" id=""  placeholder="">
 
   </div>
 
     <div class="form-group">
     <label for="exampleInputEmail1">Semester</label>
-    <input type="number" class="form-control" id=""  placeholder="">
+    <input type="number" name="Semester" class="form-control" id=""  placeholder="">
 
     </div>
 
