added req and notification route

--- a/templates/Admin/index.html
+++ b/templates/Admin/index.html
@@ -25,10 +25,10 @@
                 <h3 class="flex fixed top-2 text-gray-100 font-semibold pt-3 text-xl border-b-2">Admin Panel</h3>
             </div>
             <div class="flex justify-center m-3">
-                <h2 class="text-gray-100 font-semibold pt-3 text-l">Create Request</h2>
+                <a href="req"><h2 class="text-gray-100 font-semibold pt-3 text-l">Create Request</h2></a>
             </div>
             <div class="flex justify-center m-3">
-                <h2 class="text-gray-100 font-semibold pt-3 text-l">Notifier</h2>
+                <a href="noti"><h2 class="text-gray-100 font-semibold pt-3 text-l">Notifier</h2></a>
             </div>
             <div class="flex justify-center m-3">
                 <h2 class="flex  text-gray-100 font-semibold pt-3 text-l">Logout</h2>
@@ -37,7 +37,7 @@
 
         </div>
         <div class="flex justify-center w-full pt-3">
-            <h2 class="flex text-3xl font-semibold justify-center">Division of Computer Science and Engineering</h2>
+            <h2 class="flex text-3xl font-semibold justify-center underline">Division of Computer Science and Engineering</h2>
 
         </div>
     </div>
