--- a/templates/User/reg.html
+++ b/templates/User/reg.html
@@ -3,6 +3,7 @@
 
 <div class="w-75 m-5" >
 <form action="register" method="post">
+    {% csrf_token %}
     <h1>Register Form</h1>
     <br>
    <div class="form-group">
