--- a/templates/abcd/req.html
+++ b/templates/abcd/req.html
@@ -47,18 +47,19 @@
             <div class="flex flex-col  p-10 w-full justify-center   h-full">
                 <p class="text-black font-semibold text-2xl">Send a file Request to Students</p>
                 <div class="max-w-max">
-                    <form class="flex flex-col justify-center p-3">
+                    <form class="flex flex-col justify-center p-3" action="req" method="post" >
+                        {% csrf_token %}
                         <div class="form-group  p-2">
                           <label for="filename">File name</label>
-                          <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter File name">
-                        </div>
-                        <div class="form-group p-2">
-                          <label for="exampleInputPassword1">File Type</label>
-                          <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Enter file type (pdf,img)">
-                        </div>
+                          <input type="text" name="filename" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter File name">
+{#                        </div>#}
+{#                        <div class="form-group p-2">#}
+{#                          <label for="exampleInputPassword1">File Type</label>#}
+{#                          <input type="text"  class="form-control" id="exampleInputPassword1" placeholder="Enter file type (pdf,img)">#}
+{#                        </div>#}
                         <div class="form-group p-2">
                             <label for="exampleInputPassword1">Description</label>
-                            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Enter Description">
+                            <input type="text" name="desc" class="form-control" id="exampleInputPassword1" placeholder="Enter Description">
                         </div>
                         
                         <button type="submit" class="btn btn-primary bg-indigo-900 text-white ">Submit</button>
