--- a/templates/User/usernoti.html
+++ b/templates/User/usernoti.html
@@ -45,36 +45,9 @@
           </div>
 
         <div class="flex  flex-col p-10 w-full justify-center items-center   h-full ">
-            <table class="table table-striped table-light">
-                <thead>
-                  <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">First</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">3</th>
-                    <td>Larry</td>
-                    <td>the Bird</td>
-                    <td>@twitter</td>
-                  </tr>
-                </tbody>
-              </table>
+            <div class="alert alert-primary" role="alert">
+                This is a primary alert—check it out!
+              </div>
           
           </div>
           
