--- a/templates/User/userupload.html
+++ b/templates/User/userupload.html
@@ -48,31 +48,21 @@
             <table class="table table-striped table-light">
                 <thead>
                   <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">First</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
+                    <th scope="col">Sl.No</th>
+                    <th scope="col">FileName</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Action</th>
                   </tr>
                 </thead>
                 <tbody>
+                {% for r in reqs %}
                   <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
+                    <th scope="row">{{ forloop.counter }}</th>
+                    <td>{{ r.Filename }}</td>
+                    <td>{{ r.Desc }}</td>
+                      <td><a href="">upload</a></td>
                   </tr>
-                  <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">3</th>
-                    <td>Larry</td>
-                    <td>the Bird</td>
-                    <td>@twitter</td>
-                  </tr>
+                {% endfor %}
                 </tbody>
               </table>
           
