--- a/templates/User/usernoti.html
+++ b/templates/User/usernoti.html
@@ -44,8 +44,12 @@
 
           </div>
 
-        <div class="flex  flex-col p-10 w-full justify-center items-center   h-full ">
-            <div class="alert alert-primary" role="alert">
+        <div class="flex  flex-col p-10 w-full  items-center   h-full ">
+            <div class="flex flex-start w-full pb-3">
+                <p class=" text-2xl font-semibold">Notifications</p>
+            </div>
+            
+            <div class="alert alert-primary w-full pt-3" role="alert">
                 This is a primary alert—check it out!
               </div>
           
