--- a/templates/User/userupload.html
+++ b/templates/User/userupload.html
@@ -48,10 +48,10 @@
             <table class="table table-striped table-light">
                 <thead>
                   <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">First</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
+                    <th scope="col">S.No</th>
+                    <th scope="col">File Name</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Submit</th>
                   </tr>
                 </thead>
                 <tbody>
