--- a/templates/abcd/noti.html
+++ b/templates/abcd/noti.html
@@ -47,14 +47,15 @@
             <div class="flex flex-col  p-10 w-full justify-center   h-full">
                 <p class="text-black font-semibold text-2xl">Send a Notification to Students</p>
                 <div class="max-w-max">
-                    <form class="flex flex-col justify-center p-3">
+                    <form class="flex flex-col justify-center p-3" action="noti" method="post">
+                        {% csrf_token %}
                         <div class="form-group  p-2">
-                          <label for="filename">Title</label>
-                          <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Title">
+                          <label for="filename" >Title</label>
+                          <input type="text" name="Title" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Title">
                         </div>
                         <div class="form-group p-2">
                           <label for="exampleInputPassword1">Content</label>
-                          <input type="text" class="form-control w-[500px]" id="exampleInputPassword1" placeholder="Enter Notification Content">
+                          <input type="text" name="Content" class="form-control w-[500px]" id="exampleInputPassword1" placeholder="Enter Notification Content">
                         </div>
                     
                         
