--- a/templates/User/homeuser.html
+++ b/templates/User/homeuser.html
@@ -25,10 +25,10 @@
                 <h3 class="flex fixed top-2 text-gray-100 font-semibold pt-3 text-xl border-b-2">Candidate ID</h3>
             </div>
             <div class="flex justify-center m-3">
-                <a href="req"><h2 class="text-gray-100 font-semibold pt-3 text-l">Upload Files</h2></a>
+                <a href="userupload"><h2 class="text-gray-100 font-semibold pt-3 text-l">Upload Files</h2></a>
             </div>
             <div class="flex justify-center m-3">
-                <a href="noti"><h2 class="text-gray-100 font-semibold pt-3 text-l">Notifications</h2></a>
+                <a href="usernoti"><h2 class="text-gray-100 font-semibold pt-3 text-l">Notifications</h2></a>
             </div>
             <div class="flex justify-center m-3">
                 <h2 class="flex  text-gray-100 font-semibold pt-3 text-l">Logout</h2>
