--- a/templates/User/upload.html
+++ b/templates/User/upload.html
@@ -1,75 +1,94 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
-        tailwind.config = {
-          theme: {
-            extend: {
-              colors: {
-                clifford: '#da373d',
-              }
-            }
-          }
-        }
-      </script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              clifford: "#da373d",
+            },
+          },
+        },
+      };
+    </script>
     <title>Document</title>
-</head>
-<body>
+  </head>
+
+  <body>
     <div class="flex">
-        <div class="flex flex-col h-screen w-[300px] bg-indigo-900 justify-center">
-            <div class="flex justify-center">
-                <h3 class="flex fixed top-2 text-gray-100 font-semibold pt-3 text-xl border-b-2">Candidate ID</h3>
-            </div>
-            <div class="flex justify-center m-3">
-                <a href="/user/userupload"><h2 class="text-gray-100 font-semibold pt-3 text-l">Upload Files</h2></a>
-            </div>
-            <div class="flex justify-center m-3">
-                <a href="/user/usernoti"><h2 class="text-gray-100 font-semibold pt-3 text-l">Notifications</h2></a>
-            </div>
-            <div class="flex justify-center m-3">
-                <h2 class="flex  text-gray-100 font-semibold pt-3 text-l">Logout</h2>
-            </div>
-
-
+      <div
+        class="flex flex-col h-screen w-[300px] bg-indigo-900 justify-center"
+      >
+        <div class="flex justify-center">
+          <h3
+            class="flex fixed top-2 text-gray-100 font-semibold pt-3 text-xl border-b-2"
+          >
+            Candidate ID
+          </h3>
         </div>
-        <div class="flex flex-col item-center w-full pt-3 ">
-          <div class="">
-              <h2 class="flex text-3xl font-semibold justify-center underline border-3 border-black">Division of Computer Science and Engineering</h2>
-
-          </div>
-
-        <div class="flex  flex-col p-10 w-full  items-center   h-full ">
-            <div class="flex flex-start w-full pb-3">
-                <p class=" text-2xl font-semibold">Notifications</p>
-            </div>
-           <p class=" text-2xl font-semibold">{{ req.Filename }}</p>
-            <div class="mt-5">
-                <form action="/user/userupload/{{ req.id }}" method="post">
-                    {% csrf_token %}
-
-  <label for="formFile" class="form-label">{{ req.Desc }}</label>
-  <input class="form-control" name="Filename" type="file" id="formFile">
-                    <button type="submit" class="btn btn-primary bg-indigo-900 mt-3">Submit</button>
-                    </form>
-</div>
-          </div>
-
-
-
-
-
-
+        <div class="flex justify-center m-3">
+          <a href="/user/userupload">
+            <h2 class="text-gray-100 font-semibold pt-3 text-l">
+              Upload Files
+            </h2>
+          </a>
+        </div>
+        <div class="flex justify-center m-3">
+          <a href="/user/usernoti">
+            <h2 class="text-gray-100 font-semibold pt-3 text-l">
+              Notifications
+            </h2>
+          </a>
+        </div>
+        <div class="flex justify-center m-3">
+          <h2 class="flex text-gray-100 font-semibold pt-3 text-l">Logout</h2>
+        </div>
       </div>
+      <div class="flex flex-col item-center w-full pt-3">
+        <div class="">
+          <h2
+            class="flex text-3xl font-semibold justify-center underline border-3 border-black"
+          >
+            Division of Computer Science and Engineering
+          </h2>
+        </div>
 
-  </div>
-</div>
-</body>
+        <div class="flex flex-col p-10 w-full items-center h-full">
+          <div class="flex flex-start w-full pb-3">
+            <p class="text-2xl font-semibold">Notifications</p>
+          </div>
+          <p class="text-2xl font-semibold">{{ req.Filename }}</p>
+          <div class="mt-5">
+            <form action="/user/userupload/{{ req.id }}" method="post" enctype="multipart/form-data" >
+              {% csrf_token %}
+
+              <label for="formFile" class="form-label">{{ req.Desc }}</label>
+              <input
+                name="jazim"
+                class="form-control"
+                type="file"
+                id="formFile"
+              />
+
+              <button type="submit" class="btn btn-primary bg-indigo-900 mt-3">
+                Submit
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
