--- a/templates/User/homeuser.html
+++ b/templates/User/homeuser.html
@@ -38,14 +38,14 @@
         </div>
         <div class="flex flex-col item-center w-full pt-3 ">
           <div class="">
-              <h2 class="flex text-3xl font-semibold justify-center underline border-3 border-black">Division of Computer Science and Engineering</h2>
+              <h2 class="flex text-3xl font-semibold justify-center underline border-3 border-black">Division of Computer Science and Engineering, CUSAT</h2>
 
           </div>
 
-        <div class="flex  flex-col p-10 w-full justify-center items-center   h-full ">
-          <p class="text-black font-semibold text-2xl">Hi.. Devaprasad</p>
+        <div class="flex  flex-col p-10 w-full justify-center  h-full ">
+          <p class="text-black font-semibold text-2xl">Hi.. Candidate{Name}</p>
           <p class="text-black font-semibold text-2xl">Welcome to SoeConnect</p>
-          
+          <p class="text-black font-semibold text-2xl">See.. whats all new in SOE!</p>
           </div>
           
             
